--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Autonomia">
-        <activity android:name=".AvalPosto"></activity>
         <activity android:name=".AttPrecos" />
+        <activity android:name=".AvalMec" />
+        <activity android:name=".AvalPosto" />
+        <activity android:name=".CadMec" />
+        <activity android:name=".CadUsuario" />
         <activity android:name=".CadPosto">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
